add an interview pich on hoem.html

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,8 +9,8 @@
       <div class="card text-white bg-dark mb-3">
         <div class="card-header text-center">All pitches</div>
         <div class="card-body">
-          <h5 class="card-title text-center">Oliver Wendel Holmes</h5>
-          <p class="card-text">It is the providence of knowledge to speak and the privilege of wisdom to listen</p>
+          <h5 class="card-title text-center">Interview pitch</h5>
+          <p class="card-text">“Hi, my name is Marial. After graduating with my Bachelor’s degree in Business Administration, I’ve spent the last three years building professional experience as an Executive Assistant. I’ve successfully managed end-to-end event coordination and have generated a strong professional network for my colleagues. I was excited to learn about this opportunity in the sports management space — I’ve always been passionate about the way sports brings cultures together and would love the opportunity to bring my project management and leadership abilities to this position.</p>
           <button type="button" id="btn_like" class="btn btn-primary btn-danger btn-sm btn">Like <span><i
                 class="glyphicon glyphicon-thumbs-up"></i></span></button>
           <button type="button" id="btn_dislike" class="btn btn-primary btn-danger btn-sm">Dislike <span><i
