--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
      <link rel="stylesheet" href="{{url_for('static',filename='/Flask-Web-App-Tutorial/website/static/styles.css')}}">
   
      <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">  -->
@@ -24,7 +25,7 @@
     <title>{% block title %}Home{% endblock %}</title>
   
   </head>
-  <body style="background-color: beige;">
+  <body style="background-color: rgb(204, 199, 199);">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <button
         class="navbar-toggler"
@@ -42,8 +43,9 @@
 
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+        
           <br><br>
           {% endif %}
          
